# RustyVideoPlayer

./: Cargo.toml
src/: gl_renderer.rs  main.rs  video_renderer.rs
