[package]
name = "RustyVideoPlayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
image = "0.24.2"
cgmath = "0.18.0"
ffmpeg-sys-next = "5.0.1"
glfw = {git = "https://github.com/bjz/glfw-rs.git"}
ao = {git = "https://gitlab.com/taricorp/rust-ao.git"}

